--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,33 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
-
 ext {
-    retrofit_version = '2.4.0'
-    gson_converter_version = '2.3.0'
-    logging_interceptor_version = '3.10.0'
+    retrofit_version = '2.6.0'
+    gson_converter_version = '2.5.0'
+    logging_interceptor_version = '3.14.2'
     lifecycle_version = '2.0.0'
     android_x_version = '1.0.2'
-    constraint_layout_version = '2.0.0-alpha3'
+    constraint_layout_version = '2.0.0-beta1'
     recycler_view_version = '1.0.0'
+    kotlin_version = '1.3.31'
+    kotlin_x_coroutines_version = '1.2.1'
+    kotlin_coroutines_adapter_version = '0.9.2'
+    test_runner_version = '1.0.2'
+    espresso_core_version = '3.0.2'
+    material_version = '1.0.0'
+    junit_version = '4.12'
 }
 
 
-
 buildscript {
-    ext.kotlin_version = '1.3.11'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        ext {
+            gradle_version = '3.4.1'
+            kotlin_gradle_version = '1.3.31'
+        }
+        classpath "com.android.tools.build:gradle:$gradle_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_gradle_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
