--- a/restmodule/build.gradle
+++ b/restmodule/build.gradle
@@ -30,16 +30,13 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    testImplementation 'junit:junit:4.12'
-
-
-
+    testImplementation "junit:junit:$junit_version"
     //RETROFIT
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$gson_converter_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$logging_interceptor_version"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.11"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.0"
-    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_x_coroutines_version"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$kotlin_coroutines_adapter_version"
 
 }
